<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.openrewrite.maven</groupId>
    <artifactId>single-project</artifactId>
    <version>0.1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>29.0-jre</version>
        </dependency>
        <dependency>
            <groupId>org.openrewrite.plan</groupId>
            <artifactId>rewrite-checkstyle</artifactId>
            <version>1.1.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>@project.groupId@</groupId>
                <artifactId>@project.artifactId@</artifactId>
                <version>@project.version@</version>
                <configuration>
                    <metricsUri>LOG</metricsUri>
                    <metrics>
                        <tags>
                            <tag>
                                <key>project</key>
                                <value>${project.name}</value>
                            </tag>
                            <tag>
                                <key>team</key>
                                <value>myteam</value>
                            </tag>
                        </tags>
                    </metrics>
                    <activeRecipes>
                        <recipe>org.openrewrite.sample.Checkstyle</recipe>
                    </activeRecipes>
                    <configLocation>${maven.multiModuleProjectDirectory}/src/it/rewrite.yml</configLocation>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
